# HiveWE

./: .clang-format  .gitignore  Brush.cpp  CASC.cpp  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Camera.cpp  Camera.h  ColorButton.h  DoodadBrush.h  DoodadPalette.h  Doodads.h  FlowLayout.h  GPUTexture.cpp  GPUTexture.h  Hierarchy.cpp  HiveWE.cpp  HiveWE.h  HiveWE.rc  HiveWE.sln  HiveWE.ui  INI.h  InputHandler.cpp  InputHandler.h  JSON.cpp  JassTokenizer.cpp  LICENSE  MDX.h  MapInfo.cpp  MapInfoEditor.cpp  Minimap.cpp  Minimap.h  PathingMap.h  PathingPallete.cpp  PathingPallete.h  Quadtree.h  README-Linux.md  README.md  Regions.cpp  (+24 more)
.github/workflows/: compile.yml
.premake/premake-qt/: Readme.md  _manifest.lua  _preload.lua  init.lua  qt.lua  qtmodules.lua
.premake/utility/: abs.lua  files.lua  init.lua  vpaths.lua
Base/: BinaryReader.h  BinaryWriter.h  Doodads.cpp  Doodads.h  FlowLayout.cpp  FlowLayout.h  GameCameras.cpp  GameCameras.h  Hierarchy.cpp  Hierarchy.h  Imports.cpp  Imports.h  Map.cpp  Map.h  MapInfo.cpp  MapInfo.h  PathingMap.cpp  PathingMap.h  Physics.cpp  Physics.h  QRibbon.cpp  Regions.cpp  Regions.h  RenderManager.cpp  RenderManager.h  ResourceManager.cpp  ResourceManager.h  ShadowMap.h  Sounds.cpp  Sounds.h  Terrain.cpp  Terrain.h  TriggerStrings.cpp  TriggerStrings.h  Triggers.cpp  Triggers.h  Units.cpp  Units.h
Base/Brush/: Brush.cpp  Brush.h  DoodadBrush.cpp  DoodadBrush.h  PathingBrush.cpp  TerrainBrush.cpp  UnitBrush.cpp  UnitBrush.h
Base/File Formats/: BLP.cpp  BLP.h  CASC.cpp  CASC.h  INI.cpp  INI.h  JSON.cpp  MDX.cpp  MDX.h  MPQ.cpp  MPQ.h  SLK.cpp  SLK.h  SLK2.cpp  SLK2.h
Base/Models/: AbilityTreeModel.cpp  AbilityTreeModel.h  BaseTreeModel.cpp  BaseTreeModel.h  BuffTreeModel.cpp  BuffTreeModel.h  DestructableListModel.cpp  DestructableListModel.h  DestructibleTreeModel.cpp  DestructibleTreeModel.h  DoodadListModel.cpp  DoodadListModel.h  DoodadTreeModel.cpp  DoodadTreeModel.h  ItemTreeModel.cpp  ItemTreeModel.h  SingleModel.cpp  SingleModel.h  TableModel.cpp  TableModel.h  UnitListModel.cpp  UnitListModel.h  UnitModel.cpp  UnitModel.h  UnitSingleModel.cpp  UnitSingleModel.h  UnitTreeModel.cpp  UnitTreeModel.h  UpgradeTreeModel.cpp  UpgradeTreeModel.h
Base/Resources/: CliffMesh.cpp  GPUTexture.cpp  GPUTexture.h  GroundTexture.cpp  GroundTexture.h  PathingTexture.cpp  PathingTexture.h  Shader.h  SkinnedMesh.cpp  SkinnedMesh.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h
Data/: war3ma-old.w3i  war3map.w3i
Data/Shaders/: brush.vs  cliff.fs  cliff.vs  physics_debug.vs  preskin_mesh.cs  selection.fs  selection.vs  selection_circle.fs  skinned_mesh.fs  skinned_mesh.vs  skinned_mesh_hd.fs  skinned_mesh_hd.vs  skinned_mesh_instance_color_coded.fs  skinned_mesh_instance_color_coded.vs  skinned_mesh_instanced.fs  skinned_mesh_instanced.vs  skinned_mesh_instanced_hd.fs  skinned_mesh_instanced_hd.vs  skinned_mesh_instanced_sd.fs  skinned_mesh_instanced_sd.vs  skinned_mesh_sd.fs  skinned_mesh_sd.vs  static_mesh.fs  static_mesh.vs  static_mesh_color_coded.fs  static_mesh_color_coded.vs  static_mesh_hd.fs  static_mesh_hd.vs  static_mesh_instanced.fs  static_mesh_instanced.vs  static_mesh_instanced_hd.fs  static_mesh_instanced_hd.vs  static_mesh_instanced_sd.fs  static_mesh_instanced_sd.vs  static_mesh_sd.fs  static_mesh_sd.vs  terrain.fs  terrain.vs  test.fs
Data/Test Map/: conversation.json  war3map.doo  war3map.imp  war3map.j  war3map.mmp  war3map.w3b  war3map.w3d  war3map.w3e  war3map.w3i  war3map.w3u  war3map.wct  war3map.wpm  war3map.wtg  war3map.wts  war3mapMap.blp  war3mapSkin.w3b  war3mapUnits.doo
Data/Themes/: Dark.qss  Light.qss  dark.qss  light.qss
HiveWE/: AspectRatioPixmapLabel.cpp  AspectRatioPixmapLabel.h  BLP.cpp  BLP.h  BinaryReader.h  BinaryWriter.h  Brush.cpp  Brush.h  CASC.cpp  CASC.h  Camera.cpp  Camera.h  CliffMesh.cpp  CliffMesh.h  ColorButton.cpp  ColorButton.h  DoodadBrush.cpp  DoodadBrush.h  DoodadPalette.cpp  DoodadPalette.h  DoodadPalette.ui  Doodads.cpp  Doodads.h  FlowLayout.cpp  FlowLayout.h  GLWidget.cpp  GLWidget.h  GPUTexture.cpp  GameCameras.h  GroundTexture.cpp  GroundTexture.h  Hierarchy.cpp  Hierarchy.h  HiveWE.cbp  HiveWE.cpp  HiveWE.h  HiveWE.layout  HiveWE.qrc  HiveWE.rc  HiveWE.ui  (+111 more)
Menus/: DoodadPalette.cpp  DoodadPalette.h  DoodadPalette.ui  ImportManager.cpp  ImportManager.h  ImportManager.ui  ImportManagerEdit.cpp  ImportManagerEdit.h  ImportManagerEdit.ui  MapInfoEditor.cpp  MapInfoEditor.h  MapInfoEditor.ui  Minimap.cpp  Minimap.h  Minimap.ui  ObjectEditor.cpp  ObjectEditor.h  ObjectEditor.ui  Palette.cpp  Palette.h  PathingPalette.cpp  PathingPalette.h  PathingPalette.ui  Selections.ui  SettingsEditor.cpp  SettingsEditor.ui  TerrainPalette.cpp  TerrainPalette.h  TerrainPalette.ui  TilePather.cpp  TilePather.ui  TilePicker.cpp  TilePicker.h  TileSetter.cpp  TileSetter.ui  TriggerEditor.cpp  TriggerEditor.h  TriggerEditor.ui  UnitPalette.cpp  UnitPalette.h  (+1 more)
src/: CMakeLists.txt  Globals.h  HiveWE.cpp  HiveWE.h  HiveWE.ui  MapGlobal.h  TerrainUndo.cpp  Utilities.cpp  Utilities.h  globals.ixx  main.cpp  map_global.h  map_global.ixx  std.ixx  test.cpp  test.h  test.ixx  types.ixx
tests/: CMakeLists.txt  binary_writer_test.cpp  mdl_reader_test.cpp  modification_tables_test.cpp  validator_test.cpp
tests/fixtures/mdl/: bad_bone_geoset_id_v800.mdl  bad_emitter2_texture_id_v800.mdl  bad_eventobject_globalseq_v800.mdl  bad_face_index_v800.mdl  bad_geoset_material_id_v800.mdl  bad_geosetanim_geoset_id_v800.mdl  bad_layer_texture_id_v800.mdl  bad_pivot_count_v800.mdl  bad_ribbon_material_id_v800.mdl  bad_sequence_interval_v800.mdl  bad_skinweights_v900.mdl  bad_track_globalseq_v800.mdl  bind_pose_v900.mdl  emitter2_v800.mdl  events_v800.mdl  geometry_v800.mdl  matrix_skinning_v800.mdl  minimal_v1000.mdl  minimal_v1100.mdl  minimal_v800.mdl  minimal_v900.mdl  mismatched_normals_v800.mdl  missing_texture_path_v800.mdl  negative_extent_v800.mdl  nodes_v800.mdl  objects_v800.mdl  sequences_v800.mdl  skin_v900.mdl  textures_v800.mdl  tracks_v800.mdl  unused_material_textureanim_v800.mdl
(+781 files in other folders)
